# ProphytProtocol

./: .gitignore  LICENSE  README.md
contracts/: .gitignore  Move.toml  README.md
contracts/tests/: integration_tests.move  test_fixtures.move  unit_tests.move
frontend/: .gitignore  README.md  eslint.config.mjs  next.config.mjs  package.json  tsconfig.json
frontend/app/: error.tsx  global-not-found.tsx  layout.tsx  providers.tsx
frontend/components/: navbar.tsx
frontend/config/: fonts.ts  site.ts
frontend/lib/: api-client.ts  backend-url.ts  contracts.ts  sui.ts
frontend/services/: bet.service.ts  market.service.ts  nautilus.service.ts  price.service.ts  user.service.ts
frontend/styles/: globals.css
frontend/types/: api.types.ts  bet.types.ts  chart.types.ts  events.types.ts  index.ts  market.ts  market.types.ts  price.types.ts  protocol.types.ts  user.types.ts
indexer/: .env.example  .gitignore  .prettierignore  README.md  config.ts  db.ts  eslint.config.js  indexer.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  server.ts  sui-utils.ts  tsconfig.json
indexer/helpers/: event-filter-prophyt.ts  prophyt-indexer.ts
indexer/indexer/: event-indexer.ts  prophyt-handler.ts
indexer/prisma/: schema.prisma
indexer/routes/: bets.ts  charts.ts  markets.ts  nautilus.ts  oracle.ts  users.ts
indexer/services/: adjacent.ts  bet-service.ts  chart-service.ts  coingecko-oracle.ts  image-service.ts  market-resolution-scheduler.ts  market-resolution-service.ts  (+6 more)
nautilus-server/: .gitignore  Cargo.toml  Dockerfile  README.md
nautilus-server/src/: main.rs
(+81 files in other folders)
